--- a/app/design/adminhtml/default/default/template/catalog/product/edit.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit.phtml
@@ -107,7 +107,7 @@ Event.observe(window, 'load', function() {
 });
 
 Validation.addAllThese([
-    ['validate-super-product-attributes', '<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('Please select one or more attributes.')) ?>', function(v) {
+    ['validate-super-product-attributes', '<?= $this->jsQuoteEscape(Mage::helper('catalog')->__('Please select one or more attributes.')) ?>', function(v) {
                 return (v != "no-attributes");
             }]]);
 //]]>
