--- a/app/design/adminhtml/default/default/template/system/convert/profile/wizard.phtml
+++ b/app/design/adminhtml/default/default/template/system/convert/profile/wizard.phtml
@@ -97,8 +97,8 @@ function exportUrlField()
 
 function changeEntityType()
 {
-    //toggleSelectOption('remove', 'profile_entity_type', 'profile_direction', 'customer', 'import', '<?= Mage::helper('core')->jsQuoteEscape($this->__('Import')) ?>');
-    //toggleSelectOption('remove', 'profile_entity_type', 'profile_store_id', 'customer', '0', '<?= Mage::helper('core')->jsQuoteEscape($this->__('Default Values')) ?>');
+    //toggleSelectOption('remove', 'profile_entity_type', 'profile_direction', 'customer', 'import', '<?= $this->jsQuoteEscape($this->__('Import')) ?>');
+    //toggleSelectOption('remove', 'profile_entity_type', 'profile_store_id', 'customer', '0', '<?= $this->jsQuoteEscape($this->__('Default Values')) ?>');
     //showOption('profile_direction');
     changeDirection();
 }
@@ -106,7 +106,7 @@ function changeEntityType()
 
 function changeDirection()
 {
-    toggleSelectOption('remove', 'profile_direction', 'profile_data_transfer', 'export', 'interactive', '<?= Mage::helper('core')->jsQuoteEscape($this->__('Interactive')) ?>');
+    toggleSelectOption('remove', 'profile_direction', 'profile_data_transfer', 'export', 'interactive', '<?= $this->jsQuoteEscape($this->__('Interactive')) ?>');
     //showOption('profile_data_transfer');
     if ($('profile_direction').value == 'import') {
         profileImportOnly.each(function(id){if ($(id))$(id).up(1).show();});
