--- a/app/design/adminhtml/default/default/template/api2/permissions/user/edit/tab/roles/js.phtml
+++ b/app/design/adminhtml/default/default/template/api2/permissions/user/edit/tab/roles/js.phtml
@@ -30,7 +30,7 @@ function getActiveRestRole() {
 function restRolesRowClick(grid, event) {
     var newRestRole = getActiveRestRole();
     if (newRestRole.value !== activeRestRole.value) {
-        if (!confirm("<?= Mage::helper('core')->jsQuoteEscape($this->__('Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?')) ?>")) {
+        if (!confirm("<?= $this->jsQuoteEscape($this->__('Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?')) ?>")) {
             newRestRole.checked = !newRestRole.checked;
             activeRestRole.checked = true;
         } else {
