--- a/app/design/adminhtml/default/default/template/api2/role/users_grid_js.phtml
+++ b/app/design/adminhtml/default/default/template/api2/role/users_grid_js.phtml
@@ -46,7 +46,7 @@
                 var checked = isInput ? checkbox[0].checked : !checkbox[0].checked;
                 if (checked) {
                     checkbox[0].checked = true;
-                    if ( confirm("<?= Mage::helper('core')->jsQuoteEscape($this->__('Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?')) ?>") ) {
+                    if ( confirm("<?= $this->jsQuoteEscape($this->__('Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?')) ?>") ) {
                         checkBoxes.set(checkbox[0].value, checked);
                         varienElementMethods.setHasChanges(checkbox[0]);
                     } else {
@@ -81,7 +81,7 @@
     function myhandler(o)
     {
         if (checkBoxes.size() > 0) {
-            if (!confirm("<?= Mage::helper('core')->jsQuoteEscape($this->__('Warning!\r\nThis action will remove those users from already assigned roles\r\nAre you sure?')) ?>") ) {
+            if (!confirm("<?= $this->jsQuoteEscape($this->__('Warning!\r\nThis action will remove those users from already assigned roles\r\nAre you sure?')) ?>") ) {
                 o.checked = !o.checked;
             } else {
                 checkBoxes.each(function(el){
