--- a/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/date.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/date.phtml
@@ -16,10 +16,10 @@
 OptionTemplateDate = '<table class="border" cellpadding="0" cellspacing="0">'+
         '<tr class="headings">'+
             <?php if ($this->getCanReadPrice() !== false) : ?>
-            '<th class="type-price"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('Price')) ?></th>' +
-            '<th class="type-type"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('Price Type')) ?></th>' +
+            '<th class="type-price"><?= $this->jsQuoteEscape(Mage::helper('catalog')->__('Price')) ?></th>' +
+            '<th class="type-type"><?= $this->jsQuoteEscape(Mage::helper('catalog')->__('Price Type')) ?></th>' +
             <?php endif ?>
-            '<th class="last"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('SKU')) ?></th>'+
+            '<th class="last"><?= $this->jsQuoteEscape(Mage::helper('catalog')->__('SKU')) ?></th>'+
         '</tr>'+
         '<tr>'+
             <?php if ($this->getCanReadPrice() !== false) : ?>
