--- a/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/text.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/text.phtml
@@ -16,11 +16,11 @@
 OptionTemplateText = '<table class="border" cellpadding="0" cellspacing="0">'+
         '<tr class="headings">'+
             <?php if ($this->getCanReadPrice() !== false) : ?>
-            '<th class="type-price"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('Price')) ?></th>' +
-            '<th class="type-type"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('Price Type')) ?></th>' +
+            '<th class="type-price"><?= $this->jsQuoteEscape(Mage::helper('catalog')->__('Price')) ?></th>' +
+            '<th class="type-type"><?= $this->jsQuoteEscape(Mage::helper('catalog')->__('Price Type')) ?></th>' +
             <?php endif ?>
-            '<th class="type-sku"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('SKU')) ?></th>'+
-            '<th class="type-last last"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('catalog')->__('Max Characters')) ?> </th>'+
+            '<th class="type-sku"><?= $this->jsQuoteEscape(Mage::helper('catalog')->__('SKU')) ?></th>'+
+            '<th class="type-last last"><?= $this->jsQuoteEscape(Mage::helper('catalog')->__('Max Characters')) ?> </th>'+
         '</tr>'+
         '<tr>'+
             <?php if ($this->getCanReadPrice() !== false) : ?>
