--- a/app/design/adminhtml/default/default/template/customer/tab/addresses.phtml
+++ b/app/design/adminhtml/default/default/template/customer/tab/addresses.phtml
@@ -163,7 +163,7 @@ addressesModel.prototype = {
                 $('no_address_message').show();
             }
             else {
-                this.formContainer.innerHTML+= '<div id="no_address_message"><?= Mage::helper('core')->jsQuoteEscape(Mage::helper('customer')->__('This customer has no saved addresses.')) ?></div>'
+                this.formContainer.innerHTML+= '<div id="no_address_message"><?= $this->jsQuoteEscape(Mage::helper('customer')->__('This customer has no saved addresses.')) ?></div>'
             }
         }
     },
@@ -424,7 +424,7 @@ addressesModel.prototype = {
     },
 
     deleteAddress : function(item){
-        if(confirm('<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('customer')->__('Are you sure you want to delete this address?')) ?>')){
+        if(confirm('<?= $this->jsQuoteEscape(Mage::helper('customer')->__('Are you sure you want to delete this address?')) ?>')){
             if (!item.isNewAddress && $('deleted_'+item.id)){
                 $('deleted_'+item.id).value = 1;
                 if (item.formBlock){
@@ -442,7 +442,7 @@ addressesModel.prototype = {
     },
 
     cancelAdd : function(button){
-        if(confirm('<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('customer')->__('Are you sure you want to cancel adding of this address?')) ?>')){
+        if(confirm('<?= $this->jsQuoteEscape(Mage::helper('customer')->__('Are you sure you want to cancel adding of this address?')) ?>')){
             var item = $(this.baseItemId + button.id.replace(new RegExp('[a-z_]*',''), ''));
 
             if( item.isNewAddress){
