--- a/app/design/adminhtml/default/default/template/importexport/export/form/before.phtml
+++ b/app/design/adminhtml/default/default/template/importexport/export/form/before.phtml
@@ -53,7 +53,7 @@
             form.submit();
             form.action   = oldAction;
         } else {
-            alert('<?= Mage::helper('core')->jsQuoteEscape($this->__('Invalid data')) ?>');
+            alert('<?= $this->jsQuoteEscape($this->__('Invalid data')) ?>');
         }
     }
 //]]>
