--- a/app/design/adminhtml/default/default/template/importexport/import/form/before.phtml
+++ b/app/design/adminhtml/default/default/template/importexport/import/form/before.phtml
@@ -79,7 +79,7 @@
     varienForm.prototype.postToFrameProcessResponse = function(response)
     {
         if ('object' != typeof(response)) {
-            return alert('<?= Mage::helper('core')->jsQuoteEscape($this->__('Invalid response')) ?>');
+            return alert('<?= $this->jsQuoteEscape($this->__('Invalid response')) ?>');
         }
         $H(response).each(function(pair) {
             switch (pair.key) {
