--- a/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
@@ -65,7 +65,7 @@
         },
 
         stripTags: function () {
-            if(!window.confirm("<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to strip all tags?')) ?>")) {
+            if(!window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to strip all tags?')) ?>")) {
                 return false;
             }
             if(this.isEditor()) {
@@ -111,7 +111,7 @@
             }
 
             if($F('code').blank() || $F('code')==templateControl.templateName) {
-               value = prompt('<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('newsletter')->__('Please enter new template name')) ?>', templateControl.templateName + '<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('newsletter')->__(' Copy')) ?>');
+               value = prompt('<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Please enter new template name')) ?>', templateControl.templateName + '<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__(' Copy')) ?>');
                if(!value) {
                    if(value !== null) {
                        $('code').value = '';
@@ -156,7 +156,7 @@
         },
 
         deleteTemplate: function() {
-            if(window.confirm("<?= Mage::helper('core')->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to delete this template?')) ?>")) {
+            if(window.confirm("<?= $this->jsQuoteEscape(Mage::helper('newsletter')->__('Are you sure that you want to delete this template?')) ?>")) {
                    window.location.href = '<?= $this->getDeleteUrl() ?>';
             }
         },
