--- a/app/design/adminhtml/default/default/template/sales/order/creditmemo/create/totals/adjustments.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/creditmemo/create/totals/adjustments.phtml
@@ -37,7 +37,7 @@
     <script type="text/javascript">
     //<![CDATA[
     Validation.addAllThese([
-        ['not-negative-amount', '<?= Mage::helper('core')->jsQuoteEscape($this->helper('sales')->__('Please enter positive number in this field.')) ?>', function(v) {
+        ['not-negative-amount', '<?= $this->jsQuoteEscape($this->helper('sales')->__('Please enter positive number in this field.')) ?>', function(v) {
             if(v.length)
                 return /^\s*\d+([,.]\d+)*\s*%?\s*$/.test(v);
             else
