--- a/app/design/adminhtml/default/default/template/system/config/system/storage/media/synchronize.phtml
+++ b/app/design/adminhtml/default/default/template/system/config/system/storage/media/synchronize.phtml
@@ -14,7 +14,7 @@
 
 <script type="text/javascript">
 //<![CDATA[
-    Validation.add('required-synchronize', '<?= Mage::helper('core')->jsQuoteEscape($this->__('Synchronization is required.')) ?>', function(){
+    Validation.add('required-synchronize', '<?= $this->jsQuoteEscape($this->__('Synchronization is required.')) ?>', function(){
         storage = getConnectionName(
             $('system_media_storage_configuration_media_storage').value,
             $('system_media_storage_configuration_media_database').value
