--- a/app/design/adminhtml/default/default/template/system/email/template/edit.phtml
+++ b/app/design/adminhtml/default/default/template/system/email/template/edit.phtml
@@ -119,7 +119,7 @@
             this.renderPaths(<?= $this->getUsedCurrentlyForPaths() ?>, 'used_currently_for');
         },
         stripTags: function () {
-            if(!window.confirm("<?= Mage::helper('core')->jsQuoteEscape($this->__('Are you sure that you want to strip tags?')) ?>")) {
+            if(!window.confirm("<?= $this->jsQuoteEscape($this->__('Are you sure that you want to strip tags?')) ?>")) {
                 return false;
             }
             this.unconvertedText = $('template_text').value;
@@ -168,7 +168,7 @@
         },
 
         deleteTemplate: function() {
-            if(window.confirm("<?= Mage::helper('core')->jsQuoteEscape($this->__('Are you sure that you want to delete this template?')) ?>")) {
+            if(window.confirm("<?= $this->jsQuoteEscape($this->__('Are you sure that you want to delete this template?')) ?>")) {
                    window.location.href = '<?= $this->getDeleteUrl() ?>';
             }
         },
