--- a/app/design/frontend/base/default/template/customer/address.phtml
+++ b/app/design/frontend/base/default/template/customer/address.phtml
@@ -71,7 +71,7 @@
 </div>
 <script type="text/javascript">
     function deleteAddress(addressId) {
-        if (confirm("<?= Mage::helper('core')->jsQuoteEscape($this->__('Are you sure you want to delete this address?')) ?>")) {
+        if (confirm("<?= $this->jsQuoteEscape($this->__('Are you sure you want to delete this address?')) ?>")) {
             window.location = "<?= $this->getUrl('customer/address/delete') ?>address/" + addressId + "/";
         }
         return false;
