--- a/app/design/frontend/base/default/template/customer/address/book.phtml
+++ b/app/design/frontend/base/default/template/customer/address/book.phtml
@@ -80,7 +80,7 @@
 </div>
 <script type="text/javascript">
     function deleteAddress(addressId) {
-        if (confirm("<?= Mage::helper('core')->jsQuoteEscape($this->__('Are you sure you want to delete this address?')) ?>")) {
+        if (confirm("<?= $this->jsQuoteEscape($this->__('Are you sure you want to delete this address?')) ?>")) {
             window.location = "<?= $this->getDeleteUrl() ?>id/" + addressId + "/";
         }
         return false;
