--- a/app/design/frontend/base/default/template/paypal/express/shortcut.phtml
+++ b/app/design/frontend/base/default/template/paypal/express/shortcut.phtml
@@ -47,7 +47,7 @@
     ['<?= $shortcutHtmlId ?>', '<?= $bmlShortcutHtmlId ?>'].forEach(id => {
         document.getElementById(id).addEventListener('click', function(event) {
             <?php if ($this->getConfirmationUrl()): ?>
-            if (confirm('<?= Mage::helper('core')->jsQuoteEscape($this->getConfirmationMessage()) ?>')) {
+            if (confirm('<?= $this->jsQuoteEscape($this->getConfirmationMessage()) ?>')) {
                 this.href = '<?= $this->getConfirmationUrl() ?>';
             }
             <?php endif ?>
