--- a/app/design/frontend/base/default/template/wishlist/render/item/price_msrp_item.phtml
+++ b/app/design/frontend/base/default/template/wishlist/render/item/price_msrp_item.phtml
@@ -91,7 +91,7 @@
         <script type="text/javascript">
             Catalog.Map.addHelpLink(
                 '<?= $helpLinkId ?>',
-                '<?= Mage::helper('core')->jsQuoteEscape($this->__("What's this?")) ?>'
+                '<?= $this->jsQuoteEscape($this->__("What's this?")) ?>'
             );
         </script>
     </div>
