--- a/app/design/frontend/base/default/template/paypal/hss/review/button.phtml
+++ b/app/design/frontend/base/default/template/paypal/hss/review/button.phtml
@@ -5,8 +5,10 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Core_Block_Template $this */
 ?>
 <button type="submit" title="<?= $this->quoteEscape($this->__('Continue')) ?>" class="button btn-checkout" onclick="review.save();"><?= $this->__('Continue') ?></button>
