--- a/app/design/frontend/base/default/template/captcha/footer.phtml
+++ b/app/design/frontend/base/default/template/captcha/footer.phtml
@@ -12,12 +12,16 @@ if (!$helper->isEnabled()) return;
 $challengeUrl = $helper->getChallengeUrl();
 ?><script>
     function mahoCaptchaInject(element) {
-        element.insertAdjacentHTML('beforeend', '<altcha-widget challengeurl="<?= $challengeUrl ?>" auto=onload hidelogo hidefooter floating=auto name=maho_captcha refetchonexpire></altcha-widget>');
+        if (document.querySelector('altcha-widget')) return;
+
+        // inject altcha
+        element.insertAdjacentHTML('beforeend', '<altcha-widget challengeurl="<?= $challengeUrl ?>" auto=onload hidelogo hidefooter name=maho_captcha refetchonexpire></altcha-widget>');
         let script = document.createElement('script');
         script.type = 'module';
         script.src = '<?= Mage::getBaseUrl('js') ?>altcha.min.js';
         document.head.appendChild(script);
 
+        // replicate maho_captcha input into all forms
         document.querySelector('altcha-widget').addEventListener('statechange', (ev) => {
             try {
                 let payload = ev.detail.payload;
@@ -29,21 +33,18 @@ $challengeUrl = $helper->getChallengeUrl();
                         hiddenInput.setAttribute('name', 'maho_captcha');
                         form.appendChild(hiddenInput);
                     }
-
                     hiddenInput.value = payload;
                 });
             } catch (e) {}
         });
     }
+
     document.addEventListener("DOMContentLoaded", function () {
         document.querySelectorAll('<?= $helper->getFrontendSelectors() ?>').forEach(form => {
-            if (form.matches(':focus-within')) {
-                mahoCaptchaInject(form);
-                return;
-            }
             form.addEventListener('focusin', function (event) {
                 mahoCaptchaInject(form);
             });
         });
     });
 </script>
+<style>altcha-widget {display: flex;position: fixed;bottom: 0;right: 0}</style>
