--- a/app/design/adminhtml/default/default/layout/captcha.xml
+++ b/app/design/adminhtml/default/default/layout/captcha.xml
@@ -2,14 +2,12 @@
 <layout version="0.1.0">
     <adminhtml_index_login>
         <reference name="form.additional.info">
-            <block type="core/template" template="captcha/captcha.phtml"></block>
+            <block type="adminhtml/template" template="captcha/captcha.phtml"></block>
         </reference>
     </adminhtml_index_login>
     <adminhtml_index_forgotpassword>
         <reference name="form.additional.info">
-            <reference name="form.additional.info">
-                <block type="core/template" template="captcha/captcha.phtml"></block>
-            </reference>
+            <block type="adminhtml/template" template="captcha/captcha.phtml"></block>
         </reference>
     </adminhtml_index_forgotpassword>
 </layout>
