Renamed mahorecaptcha to mahocaptcha

--- a/app/design/adminhtml/default/default/template/captcha/captcha.phtml
+++ b/app/design/adminhtml/default/default/template/captcha/captcha.phtml
@@ -14,7 +14,7 @@ $helper = Mage::helper('captcha');
 <altcha-widget <?= $helper->getWidgetAttributes()->serialize() ?>></altcha-widget>
 <script src="<?= Mage::getBaseUrl('js') ?>maho-captcha.js"></script>
 <script>
-MahoRecaptcha.setup({
+MahoCaptcha.setup({
     frontendSelectors: '<?= $helper->getFrontendSelectors() ?>',
     widgetAttributes: <?= $helper->getWidgetAttributes()->toJson() ?>,
 });
