--- a/app/design/adminhtml/default/default/template/captcha/captcha.phtml
+++ b/app/design/adminhtml/default/default/template/captcha/captcha.phtml
@@ -9,14 +9,15 @@
 
 /** @var Mage_Adminhtml_Block_Template $this */
 $helper = Mage::helper('captcha');
+if (!$helper->isEnabled()) return;
 ?>
-<?php if ($helper->isEnabled()): ?>
 <altcha-widget <?= $helper->getWidgetAttributes()->serialize() ?>></altcha-widget>
-<script src="<?= Mage::getBaseUrl('js') ?>maho-captcha.js"></script>
+<script src="<?= Mage::getBaseUrl('js') ?>maho-captcha.js" defer></script>
 <script>
-MahoCaptcha.setup({
-    frontendSelectors: '#loginForm',
-    widgetAttributes: <?= $helper->getWidgetAttributes()->toJson() ?>,
-});
+    document.addEventListener('DOMContentLoaded', () => {
+        MahoCaptcha.setup({
+            frontendSelectors: '#loginForm',
+            widgetAttributes: <?= $helper->getWidgetAttributes()->toJson() ?>,
+        });
+    });
 </script>
-<?php endif ?>
