--- a/app/design/frontend/base/default/template/captcha/footer.phtml
+++ b/app/design/frontend/base/default/template/captcha/footer.phtml
@@ -9,13 +9,15 @@
 
 /** @var Mage_Core_Block_Template $this */
 $helper = Mage::helper('captcha');
+if (!$helper->isEnabled()) return;
 ?>
-<?php if ($helper->isEnabled()): ?>
 <altcha-widget <?= $helper->getWidgetAttributes()->serialize() ?>></altcha-widget>
+<script src="<?= Mage::getBaseUrl('js') ?>maho-captcha.js" defer></script>
 <script>
-MahoCaptcha.setup({
-    frontendSelectors: '<?= $helper->getFrontendSelectors() ?>',
-    widgetAttributes: <?= $helper->getWidgetAttributes()->toJson() ?>,
-});
+    document.addEventListener('DOMContentLoaded', () => {
+        MahoCaptcha.setup({
+            frontendSelectors: '<?= $helper->getFrontendSelectors() ?>',
+            widgetAttributes: <?= $helper->getWidgetAttributes()->toJson() ?>,
+        });
+    });
 </script>
-<?php endif ?>
