--- a/app/design/adminhtml/default/default/template/captcha/captcha.phtml
+++ b/app/design/adminhtml/default/default/template/captcha/captcha.phtml
@@ -18,6 +18,7 @@ if (!$helper->isEnabled()) return '';
         MahoCaptcha.setup({
             frontendSelectors: '#loginForm',
             widgetAttributes: <?= $helper->getWidgetAttributes()->toJson() ?>,
+            loading: '<?= $this->getSkinUrl('images/loading.svg') ?>'
         });
     });
 </script>
