--- a/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/grid.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/grid.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -17,28 +17,21 @@
             <table cellspacing="0" class="data">
                 <thead>
                 <tr class="headings">
-                    <th class=" no-link"><span class="nobr"><?= Mage::helper('sales')->__('Product Name') ?></span></th>
-                    <th class=" no-link"><span class="nobr"><?= Mage::helper('sales')->__('Weight') ?></span></th>
-                    <th class=" no-link" <?= $this->displayCustomsValue() ? '' : 'style="display: none;"' ?> width="100">
+                    <th class="no-link"><span class="nobr"><?= Mage::helper('sales')->__('Product Name') ?></span></th>
+                    <th class="no-link"><span class="nobr"><?= Mage::helper('sales')->__('Weight') ?></span></th>
+                    <th class="no-link<?= $this->displayCustomsValue() ? '' : ' no-display' ?>" width="100">
                         <span class="nobr"><?= Mage::helper('sales')->__('Customs Value') ?></span>
                     </th>
                     <th class="a-center no-link" width="100">
                         <span class="nobr"><input type="checkbox" name="" onclick="packaging.checkAllItems(this);" class="checkbox" title="<?= Mage::helper('sales')->__('Select All') ?>"></span>
                     </th>
-                    <th class=" no-link" width="100"><span class="nobr"><?= Mage::helper('sales')->__('Qty Ordered') ?></span></th>
-                    <th class=" no-link last" width="100"><span class="nobr"><?= Mage::helper('sales')->__('Qty') ?></span></th>
+                    <th class="no-link" width="100"><span class="nobr"><?= Mage::helper('sales')->__('Qty Ordered') ?></span></th>
+                    <th class="no-link last" width="150"><span class="nobr"><?= Mage::helper('sales')->__('Qty') ?></span></th>
                 </tr>
                 </thead>
 
                 <tbody>
-                <?php foreach($this->getCollection() as $item): ?>
-                    <?php $_order = $this->getShipment()->getOrder() ?>
-                    <?php $_orderItem = $_order->getItemById($item->getOrderItemId()); ?>
-                    <?php if ($item->getIsVirtual()
-                              || ($_orderItem->isShipSeparately() && !($_orderItem->getParentItemId() || $_orderItem->getParentItem()))
-                              || (!$_orderItem->isShipSeparately() && ($_orderItem->getParentItemId() || $_orderItem->getParentItem()))): ?>
-                        <?php continue; ?>
-                    <?php endif ?>
+                <?php foreach($this->getAvailableItems() as $item): ?>
                     <tr title="#" id="" class="">
                         <td class="name">
                             <?= $item->getName() ?>
@@ -46,28 +39,19 @@
                         <td class="a-center weight ">
                             <?= $item->getWeight() ?>
                         </td>
-                        <?php
-                            if ($this->displayCustomsValue()) {
-                                $customsValueDisplay = '';
-                                $customsValueValidation = ' validate-zero-or-greater ';
-                            } else {
-                                $customsValueDisplay = ' style="display: none;" ';
-                                $customsValueValidation = '';
-                            }
-                        ?>
-                        <td <?= $customsValueDisplay ?>>
-                            <input type="text" name="customs_value" class="input-text <?= $customsValueValidation ?>" value="<?= $this->formatPrice($item->getPrice()) ?>" size="10" onblur="packaging.recalcContainerWeightAndCustomsValue(this);">
+                        <td<?= $this->displayCustomsValue() ? '' : ' class="no-display"' ?>>
+                            <input type="text" name="customs_value" class="input-text<?= $this->displayCustomsValue() ? ' validate-zero-or-greater' : '' ?>" value="<?= $this->formatPrice($item->getPrice()) ?>" size="10" onblur="packaging.recalcContainerWeightAndCustomsValue(this);">
                         </td>
-                        <td class="a-center ">
+                        <td class="a-center">
                             <input type="checkbox" name="" value="<?= $item->getId() ? $item->getId() : $item->getOrderItemId() ?>" class="checkbox">
                         </td>
-                        <td class="a-center ">
+                        <td class="a-center">
                             <?= $item->getOrderItem()->getQtyOrdered()*1 ?>
                         </td>
-                        <td class="a-right last">
+                        <td class="a-right nobr last">
                             <input type="hidden" name="price" value="<?= $item->getPrice() ?>">
-                            <input type="text" name="qty" value="<?= $item->getQty()*1 ?>" class="input-text qty<?php if ($item->getOrderItem()->getIsQtyDecimal()): ?> qty-decimal<?php endif ?>">&nbsp;
-                            <button type="button" class="scalable delete icon-btn" onclick="packaging.deleteItem(this);" style="display:none;">
+                            <input type="text" name="qty" value="<?= $item->getQty()*1 ?>" class="input-text qty<?= $item->getOrderItem()->getIsQtyDecimal() ? ' qty-decimal' : '' ?>">
+                            <button type="button" class="delete icon-btn no-display" onclick="packaging.deleteItem(this);">
                                 <span><?= Mage::helper('sales')->__('Delete') ?></span>
                             </button>
                         </td>
